<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">智能交通</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="registernow">立即注册</string>
    <string name="register">注册</string>
    <string name="setip">设置IP及其端口</string>
     <string name="logname">请输入用户名</string>
    <string name="pass">请输入密码</string> 
    <string name="rempass">记住密码</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="title">智能交通</string>
    <string name="carid">请输入小车编号</string>
    <string name="carspeedselect">小车速度查询</string>
    <string name="carbalance">小车账户余额</string>
    <string name="carpay">小车账户充值</string>
     <string name="pay">充值</string>
    <string name="carlocation">小车位置</string>
    <string name="carrecord">小车账户记录</string>
    <string name="caraction">小车动作设置</string>
    <string name="etcrate1">ETC费率</string>
     <string name="parkrate1">停车场费率</string>
    <string name="trafficstatus">获取红绿灯当前状态</string>
    <string name="parklist">获取停车场记录</string>
    <string name="parkrate">查询当前停车场费率信息</string>
    <string name="freecar">查询当前空闲车位</string>
    <string name="trafficconfig">查询红绿灯配置信息</string>
    <string name="etclist">获取ETC通行日志</string>
    <string name="etcrate">获取ETC费率</string>
    <string name="allsense">所有传感器当前值</string>
    <string name="lightsense">光照传感器阀值</string>
    <string name="busstation">站台信息查询</string>
    <string name="roadstatus">查询道路状态</string>
    <string name="regname">请输入新的用户名</string>
    <string name="home">实时视图</string>
    <string name="history">历史</string>
    <string name="control">控制</string>
    <string name="select">查询</string>
    <string name="setting">设置</string>
    <string name="type">传感器类型</string>
    <string name="time">时间</string>
    <string name="choose">选择</string>
    <string name="show">是否显示导航页</string>
    <string name="language">中英文切换</string>
    <string name="updateip">修改IP地址</string>
</resources>
