<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg" >

    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register"
        android:textColor="@color/red"
        android:textSize="18sp"
        />
    <View 
        android:layout_width="fill_parent"
        android:layout_height="0.5px"
        android:background="@color/gray"
        />
    
    <EditText 
        android:id="@+id/register_name"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:hint="@string/regname"
        android:inputType="text"
        android:background="@drawable/edt_bg"
        />
    
    <EditText 
        android:id="@+id/register_pass"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:background="@drawable/edt_bg"
        />
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        >
        
        <Button 
            android:id="@+id/register_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@drawable/butt_bg"
            />
        <Button 
            android:id="@+id/register_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@drawable/butt_bg"
            />
    </LinearLayout>

</LinearLayout>
