<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">
    
    <TextView 
        android:id="@+id/dialog_common_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/setting"
        android:textColor="@color/red"
        android:textSize="20sp"
        />
    <View 
        android:layout_width="fill_parent"
        android:layout_height="0.5px"
        android:background="@color/gray"
        />
    
    <EditText 
        android:id="@+id/dialog_common_et"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:background="@drawable/edt_bg"
        />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center"
        >
        
        <Button 
            android:id="@+id/dialog_comfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="17sp"
            />
        <Button 
            android:id="@+id/dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="17sp"
            />
    </LinearLayout>

</LinearLayout>
