<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
 
    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager_chartView_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/history_lin"
        android:layout_alignParentTop="true"
        />
	<!-- <LinearLayout
	    android:background="#008080"
	    android:id="@+id/history_chart_layout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	  	<TextView
	  	    android:layout_width="0dp"
	  	    android:layout_height="0dp"
	  	    />
    </LinearLayout> -->
    <LinearLayout
        android:id="@+id/history_lin"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/type"
            android:textColor="@color/blue1"
            android:textSize="15sp"
            />
        <Spinner 
            android:id="@+id/history_sptype"
            android:layout_width="100dp"
            android:layout_height="wrap_content" 
            />
         <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/time"
            android:textColor="@color/blue1"
            android:textSize="15sp"
            />
        <Spinner 
            android:id="@+id/history_sptime"
            android:layout_width="100dp"
            android:layout_height="wrap_content" 
            />
        
        <Button 
            android:id="@+id/history_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/choose"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:background="@drawable/butt_bg"
            />
    </LinearLayout>
</RelativeLayout>
