<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/setip"
        android:textColor="@color/red"
        android:textSize="17sp"
        />
        
    <View 
        android:layout_width="fill_parent"
        android:layout_height="0.5px"
        android:background="@color/gray"
        />
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
         <EditText 
            android:id="@+id/setip1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:inputType="number"
            android:text="192"
            android:textColor="@color/white"
            android:background="@color/blue"
            />
        <EditText 
            android:id="@+id/setip2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="168"
            android:inputType="number"
            android:textColor="@color/white"
            android:background="@color/blue"
            />
        <EditText 
            android:text="228"
            android:id="@+id/setip3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:inputType="number"
            android:textColor="@color/white"
            android:background="@color/blue"
            />
        <EditText 
            android:text="18"
            android:id="@+id/setip4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:inputType="number"
            android:textColor="@color/white"
            android:background="@color/blue"
            />
        <EditText 
            android:text="8080"
            android:id="@+id/setport"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:inputType="number"
            android:textColor="@color/white"
            android:background="@color/blue"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="30dp"
        >
        <Button 
            android:id="@+id/setip_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:background="@drawable/butt_bg"
            />
        <Button 
            android:id="@+id/setip_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:background="@drawable/butt_bg"
            />
    </LinearLayout>

</LinearLayout>
